--- a/src/main/resources/static/order2.html
+++ b/src/main/resources/static/order2.html
@@ -98,8 +98,9 @@
                 alert("Order time out, Pay failed");
               }
             },
-            error: function (data) {
-              alert("error: " + data);
+            error: function (xhr) {
+              var response = JSON.parse(xhr.responseText);
+              alert(response.message);
             }
           });
         }
@@ -131,8 +132,9 @@
                 alert("Order is closed");
               }
             },
-            error: function (data) {
-              alert("error: " + data);
+            error: function (xhr) {
+              var response = JSON.parse(xhr.responseText);
+              alert(response.message);
             }
           });
         }
